--- a/index.htm
+++ b/index.htm
@@ -79,6 +79,13 @@
 					<label for="forceNQ"></label>
 				</div>
 			</div>
+			<div id="autocopy">
+				<label>Enable auto copying to clipboard</label>
+				<div class="enableAutoCopy">
+					<input type="checkbox" value="None" id="enableAutoCopy" name="check" unchecked />
+					<label for="enableAutoCopy"></label>
+				</div>
+			</div>
 			<div id="buttons">
 				<input class="submitbutton" name="create" id="create" type="button" value="Create Draft" />
 				<input class="submitbutton" name="reset" id="reset" type="button" value="Reset" />
